Font size fix on mobile?

--- a/js-poro-mod/assets/styles/base-layout.css
+++ b/js-poro-mod/assets/styles/base-layout.css
@@ -5,7 +5,7 @@
     border-radius: 12px;
     padding: 8px;
     backdrop-filter: blur(3px);
-    font-size: 1rem !important;
+    font-size: 16px !important;
 }
 
 h2 {
